<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_turquoise"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.DetilFragment">

    <RelativeLayout
        android:id="@+id/rlDetil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/favoritesToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/dark_late_gray">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/detail_movie"
                android:textColor="@color/light_gray" />

        </com.google.android.material.appbar.MaterialToolbar>

    </RelativeLayout>

    <ImageView
        android:id="@+id/imgPoster"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlDetil" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPoster"
        app:layout_constraintVertical_bias="1.0">


        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgPoster">

            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/judulFilm"
                android:textColor="@color/dark_late_gray"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/movieReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movieTitle"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/movieDate"
                android:textColor="@color/dark_late_gray"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/movieLang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movieLang"
                android:layout_marginTop="4dp"
                android:text="@string/MovieLanguge"
                android:textColor="@color/dark_late_gray"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/movieRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/rating"
                android:textColor="@color/dark_late_gray"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0" />
        </RelativeLayout>

        <TextView
            android:id="@+id/detailTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:paddingStart="20dp"
            android:paddingTop="16dp"
            android:paddingEnd="18dp"
            android:text="@string/sinopsis"
            android:textColor="@color/dark_late_gray"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailTextTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailTextTitle">

            <TextView
                android:id="@+id/detaiLFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailTextTitle"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/lorem_ipsum"
                android:textAlignment="gravity"
                android:textColor="@color/dark_late_gray"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailTextTitle" />

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>